--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
-    "nodemon": "^2.0.15"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.5",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.12"
   }
 }
