--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.0.5",
-    "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.12"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
